@@ -1,4 +1,5 @@
-Installing miau:
+Installing miau
+----------------------------------------
 
 - Type './configure' to configure miau or './configure --enable-local'
   if you'd like to install miau locally in your account.
@@ -9,23 +10,131 @@ On SunOS 5.8, in case make fails, try running gmake, it should work.
 
 
 
-Installing from CVS:
+Installing from SVN
+----------------------------------------
 
-If you have fetched miau from CVS, you need to run
-  - automake --add-missing
-  - autoreconf
-in order to generate configure -sript.
+If you have fetched miau from SVN, you will have to generate "configure" and
+config.h.in using autotools. Running ./autogen.sh should do the trick. If you
+don't have automake and friends, Subversion trunk is not for you.
 
-
-
-ipv6 support is not automatically compiled in, as miau does not currently
-support using both ipv4 and ipv6 protocols at once.  
-Give '--enable-ipv6' to configure to enable it.
-
-(See ./configure --help to change default-dirs for 'make install')
+Once you have created configure-script, proceed as described above.
 
 
 
-After author got a job, developement of miau slowed down considerably.
-miau is not dying, but new versions are likely to take a bit longer. Please
-try to hang on. :-)
+Configure options
+----------------------------------------
+
+  --enable-local
+	Running "make install" will install miau locally under user's home
+	directory. By default miau would be installed system wide.
+
+  --enable-ipv6
+	Enable IPv6. Note that this disables IPv4-support for good. Also see
+	"Note about IPv6".
+
+  --enable-dccbounce
+	Enables DCC-bouncing capability. Configuration options "dccbounce" and
+	"dccbindhost" cannot be used without this. Most users do not need this.
+
+  --enable-automode
+	Enables automode capability. When configured with enable-automode, miau
+	can give privileges to users when they join a channel. Configuration
+	options "automode" and "automodedelay" cannot be used without this.
+
+  --enable-mkpasswd
+	Enables capability to generate password hashes for "password" option.
+	This is an implementation for standard "mkpasswd" command. Most people
+	don't need this, but it can be helpfun on systems without "mkpasswd" or
+	equivalent.
+
+  --enable-releasenick
+	Enables miau to change its nick after receiving certain command over
+	IRC. Do not use this feature unless you really know what you're getting
+	in to. People should avoid this like plague, and as such no more
+	information is given here. :-)
+
+  --enable-uptime
+	Enables online command "UPTIME". This command will print out time miau
+	has been connected to an IRC server. Most people can live their lives
+	happily without this feature.
+
+  --enable-chanlog
+	Enables channel logging feature. Configuration option "chanlog" cannot
+	be used without this. Channel logging feature allows miau to log
+	channels directly via miau. Limitations apply, see misc/miaurc for
+	details.
+
+  --enable-privlog
+	Enable private message logging feature. Configuration option "privlog"
+	cannot be used without this. Private message feature allows miau to log
+	private messages directly via miau.
+
+  --enable-onconnect
+	Enables predefined actions when miau connects to a server.
+	Configuration option "onconnect" cannot be used without this. People
+	using "nickserv" that does not accept server password as nickserv
+	password probably want to enable this feature.
+
+  --enable-empty-awaymsg
+	Allows miau to send empty AWAY message. Some servers treat empty AWAY
+	message the same way as non-empty while others treat then as unsetting
+	user away.
+
+  --disable-ctcp-replies
+	Disables built-in CTCP replies. Since many IRC-networks except to get
+	valid responses for VERSION, PING, and CLIENTINFO queries, miau
+	responds to these automatically.
+
+  --disable-ascii-art
+	Disables fancy ASCII banner miau prints at start-up and when a client
+	conencts to miau.
+
+  --disable-quicklog
+	Disables "quicklog" functionality. Configuration options "qloglength",
+	"timestamp", "flushqlog", and "autoqlog" will not work if quicklog is
+	disabled.
+
+  --disable-qlogstamp
+	Disables quicklog timestamping. Configuration option "timestamp" does
+	not work if qlogstamp is disabled.
+
+  --disable-inbox
+	Disables inbox functionality. When clients are not connected, and
+	private messages are not written in quicklog, or they expire, messages
+	are written in inbox. When client connects, miau will then notify user
+	about messages waiting in inbox.
+
+  --enable-enduserdebug
+	Allows miau to send debug information to connected client in case of
+	unexpected messages from IRC network, or when internal status indicates
+	something is wrong. Enable this if you want to help developer(s) to get
+	rid of remaining bugs in miau. So far experience has shown that
+	enduserdebug generates /very/ few messages if any.
+
+  --enable-pingstat
+	Allow miau to collect information about sent PINGs and received PONGs.
+	Along with enduserdebug, miau will warn about lost PING replies when
+	miau experiences lag from the server. Online command "PINGSTAT" will
+	not work without this.
+
+  --enable-dumpstatus
+	Enables online command "DUMP" and "USR2" signal handling. Receiving any
+	will make miau dump its internal status to connected clients and to
+	stderr. This is often quite helpful when debugging internals of miau.
+
+  --enable-debug
+	Enables -g switch for compiler. If you don't know what this means, you
+	probably don't need it. Even if you do, you know how to get the same
+	results with other means.
+
+
+
+Note about IPv6
+----------------------------------------
+
+IPv6 support is /not/ automatically compiled in, as miau does not currently
+support using both IPv4 and IPv6 protocols at once. However IPv4-mapped
+IPv6-addresses can be used. For instance, IPv4 address 172.16.1.1 can be
+written as ::ffff:172.16.1.1.
+
+Give '--enable-ipv6' to configure to enable support for IPv6.
