@@ -1,0 +1,7 @@
+#!/bin/sh
+
+set -x
+aclocal
+autoconf
+autoheader
+automake --add-missing
