@@ -2,8 +2,4 @@ Nowadays I have very little time to develope miau, so the developement is
 likely to slow down for now. New version, written from scratch, is still
 "coming", but I wouldn't hold my breath if I was you.
 
-This release contains a few evil and known bugs, but as the release have been
-peding for two months already, I've decided to release it anyway. "Release
-early, release often." Better late than ever I guess.
-
 See ChangeLog for a list of recent changes.
